test/spec_vectors/func/fail/module_18.wat
(module (func $type-local-num-vs-num (result i64) (local i32) (local.get 0)))